aar/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      run: frontend
  replicas: 1
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - name: frontend
        image: anrop/aar-frontend:map-tiles-offset
        ports:
          - containerPort: 8080
      restartPolicy: Always
