aar/rails.yml
apiVersion: v1
kind: Service
metadata:
  name: rails
  labels:
    run: rails
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: public
  selector:
    run: rails
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails
spec:
  selector:
    matchLabels:
      run: rails
  replicas: 1
  template:
    metadata:
      labels:
        run: rails
    spec:
      containers:
      - name: rails
        image: anrop/aar-rails
        ports:
          - containerPort: 8080
      restartPolicy: Always
