aar/ingress-rails.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rails
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - rails.aar.anrop.se
      secretName: aar-rails-tls
  rules:
    - host: rails.aar.anrop.se
      http:
        paths:
        - backend:
            serviceName: rails
            servicePort: 8080
